добавлено создание пользователей из админки и шаблоны. Начинаю проверять и тестировать.